--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members=[ "backend", "db",  "nova-client", "searcher-client","sei-client" ]
+members=[ "backend", "db",  "nova-client", "searcher-client","sei-client" , "sync-nft-holding", "tx-scan-tools"]
 
